# stutterd

./: .gitignore  LICENSE  README.md  get_stutterd.sh  polybar.ini  pyproject.toml  pyrightconfig.json
src/stutterd/: main.py
src/stutterd/classes/: listener.py  stt_type.py  typer.py
